# IBIS-EEG

./: .gitignore  pyproject.toml
assets/: qcr_to_bids_mapping.csv
notebooks/: aep.ipynb
scripts/: Makefile  _1_save_annotations.py  _2_prune_aep_annotations.py  _3_make_bids_aep.py  _4_make_bids_data_quality_plots.py  _5_run_autoreject.py  _6_make_aep_evoked.py  get_peaks.py  inspect_event_timings.py  load_files.py  make_aep_evoked.py  make_bids_aep.py  make_bids_data_quality_plots.py  make_grand_average.py  plot_raw.py  process_ibis.py  process_ibis_mp.py  review_pylossless.py  submit_autoreject_job.sbatch  submit_autoreject_jobs.py  submit_processing_job.sbatch
