[project]
name = "ibis-eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.1",
    "mne-bids>=0.16.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.5"]

[dependency-groups]
processing = [
    "pylossless>=0.2.0",
    "python-picard>=0.8",
]
