[project]
name = "ibis-eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autoreject>=0.4.3",
    "defusedxml>=0.7.1",
    "ipython>=8.36.0",
    "mne-bids>=0.16.0",
    "seaborn>=0.13.2",
    "xarray>=2025.3.1",
    "zarr>=2.18.3",
]

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.5"]

[dependency-groups]
processing = [
    "pylossless>=0.2.0",
    "python-picard>=0.8",
]
